--- a/index.html
+++ b/index.html
@@ -1,18 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IEEE_SPS</title>
-    <link rel="stylesheet" href="main.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <style>
-        p {
-            background-image: url('new_sps_logo_desktop_bg_web.jpg');
-        }
-    </style>
-</head>
-<body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-</body>
+    <link rel="stylesheet" href="main.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <div>
+      <h2 class="text-white">
+        2024 Seasonal School on AI Trends in Signal Processing
+      </h2>
+      <p class="text-white">
+        This summer course aims to provide a comprehensive understanding of
+        Signal Processing in the areas of Image and Speech/audio Processing.
+        Despite the robustness of Signal Processing algorithms, the development
+        of smart and intelligent technology is on the rise with the introduction
+        of AI. Seasonal schooling can assist students/research scholars to
+        advance and gain a better understanding of signal-processing techniques
+        as well as AI. The emphasis will be on applications of AI in Image
+        Processing and Speech Processing, stressing sometimes overlooked
+        concerns linked to hardware limits and system architectures. Attendees
+        will be exposed to renowned signal-processing researchers and industry
+        practitioners from the above backgrounds. A typical day at the seasonal
+        school involves numerous lectures that provide comprehensive technical
+        content on various elements of Signal Processing, followed by a hands-on
+        workshop on MATLAB Toolboxes for Signal Processing led by industry
+        specialists
+      </p>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
